# fluid2d-rs

./: Cargo.toml  LICENSE  README.md
src/: components.rs  kernels.rs  main.rs  systems.rs
src/resources/: config.rs  mod.rs  simulation.rs
